<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pc1.login.RegistrarseActivity">

    <TextView
        android:text="@string/ingresaDatos"
        android:textColor="@color/negro"
        android:gravity="center"
        android:textSize="17sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/ingresaNombres"
                android:textColor="@color/negro"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/ingresaApellidos"
                android:textColor="@color/negro"
                android:textSize="15sp"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/ingresaCorreo"
                android:textColor="@color/negro"
                android:textSize="15sp"
                android:layout_marginTop="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/ingresaTelefo"
                android:textColor="@color/negro"
                android:textSize="15sp"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/ingresaEdad"
                android:textColor="@color/negro"
                android:textSize="15sp"
                android:layout_marginTop="19sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etNombres"
                android:textSize="15sp"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="35dp" />
            <EditText
                android:id="@+id/etApellidos"
                android:textSize="15sp"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="35dp" />
            <EditText
                android:id="@+id/etCorreo"
                android:textSize="15sp"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="35dp" />
            <EditText
                android:id="@+id/etTelefono"
                android:textSize="15sp"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="35dp" />
            <EditText
                android:id="@+id/etEdad"
                android:textSize="15sp"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="35dp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnRegistrarseActivityRegistrarse"
        android:text="@string/registrarse"
        android:onClick="onClickRegistrarse"
        android:textColor="@color/negro"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textAllCaps="false"
        android:layout_width="100dp"
        android:layout_height="35dp" />

    <Button
        android:id="@+id/btnCancelarActivityRegistrarse"
        android:text="@string/cancelar"
        android:onClick="onClickCancelar"
        android:textColor="@color/negro"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textAllCaps="false"
        android:layout_width="100dp"
        android:layout_height="35dp" />

    <TextView
        android:text="Hola mundo0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
