<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/grisClaro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pc1.login.MainActivity">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <TextView
           android:layout_width="120dp"
           android:layout_height="wrap_content"
           android:textAppearance="?android:attr/textAppearanceSmall"
           android:text="@string/email_o_telefono"
           android:textSize="13dp"
           android:textColor="@color/negro"
           android:id="@+id/tv1"
           android:layout_alignParentTop="true"
           android:layout_alignParentStart="true" />

       <TextView
           android:layout_width="120dp"
           android:layout_height="wrap_content"
           android:textAppearance="?android:attr/textAppearanceSmall"
           android:layout_marginLeft="10dp"
           android:text="@string/contrasenia"
           android:textSize="13dp"
           android:textColor="@color/negro"
           android:id="@+id/tv2"
           android:layout_alignParentTop="true"
           android:layout_toEndOf="@+id/tv1" />

       <EditText
           android:layout_width="120dp"
           android:layout_height="35dp"
           android:id="@+id/etUsuario"
           android:textSize="12dp"
           android:layout_below="@+id/tv1"
           android:layout_alignParentStart="true"
           android:layout_alignEnd="@+id/tv1" />

       <EditText
           android:layout_width="120dp"
           android:layout_height="35dp"
           android:inputType="textPassword"
           android:textSize="12dp"
           android:ems="10"
           android:id="@+id/etPassword"
           android:layout_alignBottom="@+id/etUsuario"
           android:layout_alignStart="@+id/tv2"
           android:layout_alignEnd="@+id/tv2" />

       <Button
           android:layout_width="wrap_content"
           android:layout_height="35dp"
           android:text="@string/iniciar_sesion"
           android:textSize="13dp"
           android:textAllCaps="false"
           android:id="@+id/btnIniciarSecion"
           android:layout_below="@+id/tv2"
           android:layout_alignParentEnd="true" />
   </RelativeLayout>

    <TextView
        android:background="@drawable/campo2"
        android:layout_width="wrap_content"
        android:layout_height="130dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:onClick="onClickRegistro"
            android:textAllCaps="false"
            android:id="@+id/btnRegistrarse"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="29dp" />
    </RelativeLayout>

</LinearLayout>
